crates/squealy/tests/compile_fail/aggregate_plus_column_rejected.stderr
error[E0277]: the trait bound `Expr<'_, AddExpr<CountExpr<UserId>, UserBig>, squealy::BinaryExprAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::ColumnExprAst<UserBig>>>: squealy::ProjectionClass` is not satisfied
  --> tests/compile_fail/aggregate_plus_column_rejected.rs:17:10
   |
17 |         .select(|(user,)| user.id.count() + user.big);
   |          ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `squealy::ProjectionClass` is not implemented for `Expr<'_, AddExpr<CountExpr<UserId>, UserBig>, squealy::BinaryExprAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::ColumnExprAst<UserBig>>>`
help: the trait `squealy::ProjectionClass` is implemented for `Expr<'_, K, Ast>`
  --> src/expr.rs
   |
   | / impl<'scope, K, Ast> ProjectionClass for Expr<'scope, K, Ast>
   | | where
   | |     Ast: ExprAst + AstProjectionClass,
   | |     <Ast as AstProjectionClass>::Class: TermProjectionClass,
   | |____________________________________________________________^
   = note: required for `Ungrouped` to implement `squealy::ValidSelect<Expr<'_, AddExpr<CountExpr<UserId>, UserBig>, squealy::BinaryExprAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::ColumnExprAst<UserBig>>>, OrderNone>`
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |     fn select<P>(
   |        ------ required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
